*SVN*


-----
1.2.0

Made config method optional - it is now no longer used internally by the Engines plugin, and should be explicitly required by individual engines should they wish to use it. This should help avoid any conflicts with other config methods.
Moved the bulk of the Rails patches into the lib/extensions folder. Please update test_helpers to reload the testing extensions from the new location (a legacy source file is included in the original place to ease transitioning for the moment)
Major refactor of internal methods and code into distinct files under lib/
Ensure that engine module is referenced properly in init_engine.rb [Ticket #166]
Added slightly saner version checking, via the Engines.on_rails_1_1? (and so on) methods


-----
1.1.4

Fixed creation of multipart emails (Ticket #190)
Added a temporary fix to the code-mixing issue. In your engine's test/test_helper.rb, please add the following lines:

  # Ensure that the code mixing and view loading from the application is disabled
  Engines.disable_app_views_loading = true
  Engines.disable_app_code_mixing = true

is will prevent code mixing for controllers and helpers, and loading views from the application. One thing to remember is to load any controllers/helpers using 'require_or_load' in your tests, to ensure that the engine behaviour is respected (Ticket #135)
Added tasks to easily test engines individually (Ticket #120)
Fixture extensions will now fail with an exception if the corresponding class cannot be loaded (Ticket #138)
Patch for new routing/controller loading in Rails 1.1.6. The routing code is now replaced with the contents of config.controller_paths, along with controller paths from any started engines (Ticket #196)
Rails' Configuration instance is now stored, and available from all engines and plugins.


-----
1.1.3

Fixed README to show 'models' rather than 'model' class (Ticket #167)
Fixed dependency loading to work with Rails 1.1.4 (Ticket #180)


-----
1.1.2
