@@ -4,7 +4,8 @@
 -----
 1.2.0
 
-Made config method optional - it is now no longer used internally by the Engines plugin, and should be explicitly required by individual engines should they wish to use it. This should help avoid any conflicts with other config methods.
+Made config method optional - it is now no longer used internally by the Engines plugin, and should be explicitly required by individual engines should they wish to use it. This should help avoid any conflicts with other config methods. [Ticket #187]
+The Edge Rails flag is now a constant - module Engines; EdgeRails = true; end - rather than a config flag.
 Moved the bulk of the Rails patches into the lib/extensions folder. Please update test_helpers to reload the testing extensions from the new location (a legacy source file is included in the original place to ease transitioning for the moment)
 Major refactor of internal methods and code into distinct files under lib/
 Ensure that engine module is referenced properly in init_engine.rb [Ticket #166]
